fixed dropdown overlapping

--- a/styles.css
+++ b/styles.css
@@ -426,6 +426,8 @@ CONTACT
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
         box-shadow: 0px 0px 4px rgb(0, 0, 0);
+        margin-top: 7px;
+        
 
     }
     .menu li{
